--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">蓝牙Demo</string>
+    <string name="app_name">蓝牙4.0Demo</string>
     <string name="ble_not_supported">您的设备不支持蓝牙4.0</string>
 
     <string name="label_data">Data:</string>
@@ -18,6 +18,6 @@
     <!-- Menu items -->
     <string name="menu_connect">Connect</string>
     <string name="menu_disconnect">Disconnect</string>
-    <string name="menu_scan">Scan</string>
-    <string name="menu_stop">Stop</string>
+    <string name="menu_scan">扫描</string>
+    <string name="menu_stop">停止</string>
 </resources>
